# python-goal-babbling

./: .gitignore  README.md  pyproject.toml  tox.ini
doc/example/: goals.py  main.py  utils.py
doc/example/dataset900_a(-30.0,-30.0,-30.0,)_(30.0,30.0,30.0,)_b(44.0,66.0,84.0,)_(66.0,99.0,126.0,)/test/: X_data.csv
doc/example/dataset900_a(-30.0,-30.0,-30.0,)_(30.0,30.0,30.0,)_b(44.0,66.0,84.0,)_(66.0,99.0,126.0,)/train/: X_data.csv  y_data.csv
docs/example/: README.md  goals.py  main.py  utils.py
docs/example/dataset900_a(-30.0,-30.0,-30.0,)_(30.0,30.0,30.0,)_b(44.0,66.0,84.0,)_(66.0,99.0,126.0,)/test/: y_data.csv
docs/source/: conf.py  extending.rst  how_to.rst  index.rst
src/pygb/: __init__.py  test_module.py
src/pygb/_impl/: _logging.py  _parameters.py  _pre_configured.py
src/pygb/_impl/_core/: _abstract_context.py  _abstract_estimate_cache.py  _abstract_loggable.py  _abstract_model_store.py  _abstract_state.py  _abstract_stopping_criteria.py  _abstract_utils.py  _context.py  _epoch_set_record.py  _event_system.py  _events.py  _goals.py  _model.py  _parameters.py  _runtime_data.py  _state_machine.py  _states.py  _stopping_criteria.py
src/pygb/_impl/_gb_states/: _epoch_finished_state.py  _epoch_set_finished_state.py  _generate_home_sequence_state.py  _generate_sequence_state.py  _go_home_decision_state.py  _sequence_finished_state.py  _setup_state.py  _stopped_state.py
src/pygb/_impl/_gb_utils/: _balanced_goal_selector.py  _error_based_goal_selector.py  (+9 more)
src/pygb/interfaces/: __init__.py
src/pygb/states/: __init__.py
src/pygb/tracking/: __init__.py
tests/: conftest.py
tests/unit/: test_test_module.py
tests/unit/_impl/: test_parameters.py  test_pre_configured.py
(+28 files in other folders)
