[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-goal-babbling"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "numpy~=1.25",
]

[project.optional-dependencies]
dev = [
    "black~=23.7.0",
    "isort~=5.12.0",
]

test = [
    "pytest~=7.4.0"
]

[tool.black]
line_length = 120

[tool.isort]
profile = "black"