[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-goal-babbling"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "numpy~=1.25",
    "mlflow>=2.6.0"
]

[project.optional-dependencies]
plot = [
    "pydot>=1.4.2"
]
dev = [
    "black~=23.7.0",
    "isort~=5.12.0",
    "pytest",
    "pytest-cov"
]
doc = [
    "sphinx",
    "furo",
    "tox"
]

[tool.black]
line_length = 120

[tool.isort]
profile = "black"