[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-goal-babbling"
version = "0.1.0"
readme = "README.md"
description = "Goal Babbling in pure Python."
authors = [
    {name = "Nico Weil", email = "nico.weil@web.de"}
]
license = {file = "LICENSE", type ="EUPL"}
requires-python = ">=3.11"
dependencies = [
    "numpy~=1.25",
    "mlflow>=2.6.0"
]

[project.optional-dependencies]
plot = [
    "pydot>=1.4.2"
]
dev = [
    "black~=23.7.0",
    "isort~=5.12.0",
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0"
]
doc = [
    "sphinx~=7.2.5",
    "furo",
    "tox~=4.11"
]

[tool.black]
line_length = 120

[tool.isort]
profile = "black"